feat(ai): align prediction response to dynamic top_factors
Update Spring handling to consume variable-length top_factors only, remove legacy top1/2/3 and mission-candidate assumptions, and add coverage for empty/mid/large factor lists and score sanity thresholds.

Made-with: Cursor